Khoi tao frontend va hieu chinh backend